css/header-section.css
.header-section {
    display: flex;
    flex-direction: column;
    align-items: center;
    height: 80vh;
    width: 100vw;
    background-color: #1f2937;
}

.header {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 80vw;
    height: 5vh;
    padding: 1em;
}

.logo {
    color: #f9faf8;
    font-size: 24px;
    font-weight: 600;
}

.header-links {
    margin-left: auto;
}

.header-links > ul {
    display: flex;
    margin: 0;
    padding: 0;
    gap: 1em;
    list-style-type: none;
    color: #e5e7eb;
    font-size: 18px;
}

.header-links a {
    text-decoration: none;
}

.header-content {
    display: flex;
    justify-content: center;
    align-items: center;
    justify-content: space-around;
    width: 80vw;
    height: 60vh;
    align-content: flex-start;
    gap: 5vw;
}

.content-sidebar {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    gap: 1vh;
    width: 35vw;
}

.title {
    font-size: 48px;
    font-weight: bolder;
    color: #f9faf8;
}

.subtext {
    color: #e5e7eb;
    font-size: 18px;
}

.header-sign-up {
    display: flex;
    justify-content: center;
    padding: .5em 1em;
    background-color: #3882f6;
    color: white;
    width: 8em;
    border: none;
    border-radius: .5em;
    font-size: 1em;
}

.placeholder-picture {
    display: flex;
    flex: none;
    justify-content: center;
    align-items: center;
    width: 500px;
    height: 300px;
    background-color: rgb(155, 155, 155);
    color: white;
}

